fix(footer): spacing and font-weight improvements

--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -69,10 +69,10 @@ hr {
 }
 
 .footer\:links {
-  @apply py-4 md:py-0 px-0 md:pr-20 text-center md:text-left;
+  @apply py-4 md:py-0 text-center md:text-left;
 }
 .footer\:links > p {
-  @apply text-gray-500;
+  @apply font-semibold;
 }
 .footer\:links > ul {
   @apply mt-2;
